--- a/perldoc/ko/perl/5.10/perldebtut.pod
+++ b/perldoc/ko/perl/5.10/perldebtut.pod
@@ -259,7 +259,7 @@ and 'B<S>' shows all subroutines (by pattern) as shown below.
 	welcome 
 
 13 번째 줄에서 동작이 있으니 'B<c>' 명령을 이용해서 특정 줄이나 함수까지
-실행하는 '단 한 번의' 정지점을 삽입하자:
+실행하는 '단 한 번의' 정지점(브레이크 포인트)을 삽입하자:
 
 	DB<8> c 13
 	All OK
@@ -399,8 +399,8 @@ eval 할 수 있고 정규 표현식이나 코드의 일부를 실험할 수 도
 
 =head1 Stepping through code
 
-Here's a simple program which converts between Celsius and Fahrenheit, it too
-has a problem:
+섭씨와 화씨를 변환하는 간단한 프로그램이 있다.
+이 프로그램은 문제가 있다:
 
 	#!/usr/bin/perl -w
 	use strict;
@@ -438,8 +438,8 @@ has a problem:
 	}
 
 
-For some reason, the Fahrenheit to Celsius conversion fails to return the
-expected output.  This is what it does:
+어떤 이유로, 화씨에서 섭씨로의 변환은 기대했던 값을 구하지 못한다.
+이 프로그램은 이렇게 동작한다:
 
 	> temp -c0.72
 	33.30 f
@@ -447,12 +447,13 @@ expected output.  This is what it does:
 	> temp -f33.3
 	162.94 c
 
-Not very consistent!  We'll set a breakpoint in the code manually and run it
-under the debugger to see what's going on.  A breakpoint is a flag, to which
-the debugger will run without interruption, when it reaches the breakpoint, it
-will stop execution and offer a prompt for further interaction.  In normal
-use, these debugger commands are completely ignored, and they are safe - if a
-little messy, to leave in production code.
+일관적이지 못하다!  우리는 코드에 직접 정지점을 설정하고,
+무슨 일이 일어나는지 확인하기 위해 디버거를 이용해 실행할 것이다.
+정지점은 일종의 플래그로, 디버거는 정지점에 도달하기 전까지는
+방해받지 않고 실행하다가 정지점에 도달하면 실행을 멈추고
+다음 상호작용을 위해 프롬프트를 제공한다.
+보통의 경우 이 디버거 명령은 완전하게 무시하며, 안전하다.
+만약 좀 너저분하다면 최종 코드에서는 제거하도록 한다.
 
 	my ($in, $out) = ($num, $num);
 	$DB::single=2; # insert at line 9!
@@ -469,12 +470,12 @@ little messy, to leave in production code.
 
 	main::(temp:4): my $arg = $ARGV[0] || '-c100';     
 
-We'll simply continue down to our pre-set breakpoint with a 'B<c>':
+'B<c>' 명령을 이용해 간단하게 미리 정한 정지점으로 이동하자(continue):
 
   	DB<1> c
 	main::(temp:10):                if ($deg eq 'c') {   
 
-Followed by a view command to see where we are:
+우리가 어디에 있는지 보기위해 view 명령을 이용해 따라가자:
 
 	DB<1> v
 	7:              my ($deg, $num) = ($1, $2);
@@ -488,29 +489,31 @@ Followed by a view command to see where we are:
 	15:                     $out = &f2c($num);
 	16              }                             
 
-And a print to show what values we're currently using:
+그리고 현재 사용하고 있는 값을 출력하자:
 
 	DB<1> p $deg, $num
 	f33.3
 
-We can put another break point on any line beginning with a colon, we'll use
-line 17 as that's just as we come out of the subroutine, and we'd like to
-pause there later on:
+콜론으로 시작하는 코드상의 줄이 시작하는 부분이면 어느 곳이든
+또 다른 정지점을 설정할 수 있다.  함수가 막 끝나는 지점인 17 번째 줄을
+이용할 것이고, 추후 이곳에서 잠시 멈추기를 원할 것이다:
 
 	DB<2> b 17
 
-There's no feedback from this, but you can see what breakpoints are set by
-using the list 'L' command:
+정지점을 설정하는 작업은 별 반응 없이 그대로 프롬프트를 출력한다.
+하지만 'L' 명령을 이용해서 현재 설정한 정지점 목록을 확인할 수 있다:
 
 	DB<3> L
 	temp:
  		17:            print "$out $deg\n";
    		break if (1)     
 
-Note that to delete a breakpoint you use 'd' or 'D'.
+정지점을 지우기 위해서는 'd' 나 'D' 를 이용한다.
+(역주: 더이상 정지점을 지우기 위해서 'd'와 'D'를 사용하지 않는다.
+5.8.8 과 5.10 의 펄 디버거에서 정지점을 지우는 명령은 'B<B>' 다.)
 
-Now we'll continue down into our subroutine, this time rather than by line
-number, we'll use the subroutine name, followed by the now familiar 'v':
+이제 서브루틴까지 계속 진행할 것이다. 이번에는 줄 번호를 사용하는 대신
+함수 이름을 이용할 것이다. 그리고 이제 친숙한 'v' 를 이용해 코드를 따라가자:
 
 	DB<3> c f2c
 	main::f2c(temp:30):             my $f = shift;  
@@ -528,22 +531,23 @@ number, we'll use the subroutine name, followed by the now familiar 'v':
 	33:             my $c = shift;   
 
 
-Note that if there was a subroutine call between us and line 29, and we wanted
-to B<single-step> through it, we could use the 'B<s>' command, and to step
-over it we would use 'B<n>' which would execute the sub, but not descend into
-it for inspection.  In this case though, we simply continue down to line 29:
+현재 위치에서 29 번째 줄 사이에 함수가 있다고 가정했을때,
+그 함수로 한 단계 들어가기를 원한다면 'B<s>' 명령을 사용하고,
+정밀 검사를 위해 하부로 내려가지 않고 그냥 띄어 넘기를 원한다면
+'B<n>' 명령을 사용한다.
+이 경우는 단순하게 29 번째 줄까지 계속 진행하도록 한다:
 
 	DB<4> c 29  
 	main::f2c(temp:29):             return $c;
 
-And have a look at the return value:
+그리고 반환 값을 살펴보자:
 
 	DB<5> p $c
 	162.944444444444
 
-This is not the right answer at all, but the sum looks correct.  I wonder if
-it's anything to do with operator precedence?  We'll try a couple of other
-possibilities with our sum:
+전혀 원했던 답이 아니지만 덧셈은 맞는것 같다.
+혹시 연산자 우선 순위와 관련있는 것이 아닐까?
+우리의 덧셈에서 가능한 다른 경우를 고려해보자:
 
 	DB<6> p (5 * $f - 32 / 9)
 	162.944444444444
@@ -557,15 +561,15 @@ possibilities with our sum:
 	DB<9> p 5 * ($f - 32) / 9
 	0.722222222222221
 
-:-) that's more like it!  Ok, now we can set our return variable and we'll
-return out of the sub with an 'r':
+:-) 찾았다!
+좋다. 이제 반환할 변수를 설정하고 'r' 명령을 이용해 함수에서 되돌아가자:
 
 	DB<10> $c = 5 * ($f - 32) / 9
 
 	DB<11> r
 	scalar context return from main::f2c: 0.722222222222221
 
-Looks good, let's just continue off the end of the script:
+괜찮아 보인다. 이제 스크립트의 나머지 부분까지 계속해 실행해보자:
 
 	DB<12> c
 	0.72 c 
@@ -573,8 +577,8 @@ Looks good, let's just continue off the end of the script:
   	use O inhibit_exit to avoid stopping after program termination,
   	h q, h R or h O to get additional info.   
 
-A quick fix to the offending line (insert the missing parentheses) in the
-actual program and we're finished.
+실제 프로그램에서 성가시게 굴었던 줄에 간단한 수정
+(빠뜨린 괄호를 추가하는 것)을 하자.  끝났다!
 
 
 =head1 Placeholder for a, w, t, T
