--- a/perldoc/ko/perl/5.10/perltooc.pod
+++ b/perldoc/ko/perl/5.10/perltooc.pod
@@ -6,20 +6,17 @@ perltooc - Tom's OO Tutorial for Class Data in Perl
 
 When designing an object class, you are sometimes faced with the situation
 of wanting common state shared by all objects of that class.
-
 오브젝트 클래스를 디자인 할때 당신은 가끔 그 클래스의 오브젝트들이 공통으로 공유
 할수 있는 상태값을 원할때와 부딪히게 될것이다.
 
 Such I<class attributes> act somewhat like global variables for the entire
 class, but unlike program-wide globals, class attributes have meaning only to
 the class itself.
-
 그러한 I<클래스 속성들>은 클래스 전체에 대해 전역변수와 같이 행동하는데
 프로그램상의 전역이라고 보기보다는 클래스 속성들은 클래스 자체에서만 *효과*가
 있다.
 
 Here are a few examples where class attributes might come in handy:
-
 클래스 속성들이 유용 할때의 예를 몇가지 들어 보도록 하겠다.
 
 =over 4
@@ -28,21 +25,18 @@ Here are a few examples where class attributes might come in handy:
 
 to keep a count of the objects you've created, or how many are
 still extant.
-
 당신이 몇개의 갯수의 오브젝트를 생성했는지, 아니면 몇개가 현존하고 있는지 알기 위해
 
 =item *
 
 to extract the name or file descriptor for a logfile used by a debugging
 method.
-
 디버깅에 사용될 로그 파일의 이름이나 파일 디스크립터를 추출할때.
 
 =item *
 
 to access collective data, like the total amount of cash dispensed by
 all ATMs in a network in a given day.
-
 한 네트워크 내에 존재하는 모든 ATM 기계들의 전체 지출된 현금 금액을 알기 위한
 총체적인 데이터를 접근할때.
 
@@ -50,7 +44,6 @@ all ATMs in a network in a given day.
 
 to access the last object created by a class, or the most accessed object,
 or to retrieve a list of all objects.
-
 클래스를 이용해 마지막으로 생성된 오브젝트를 접근하기 위해, 아니면 가장 많이
 접근된 오브젝트나, 모든 오브젝트에 대한 리스트를 가져오기 위해.
 
@@ -58,7 +51,6 @@ or to retrieve a list of all objects.
 =back
 
 Unlike a true global, class attributes should not be accessed directly.
-
 본래의 전역변수와는 달리, 클래스 속성들 직접적으로 접근되어선 안된다.
 
 Instead, their state should be inspected, and perhaps altered, only
@@ -66,7 +58,6 @@ through the mediated access of I<class methods>.  These class attributes
 accessor methods are similar in spirit and function to accessors used
 to manipulate the state of instance attributes on an object.  They provide a
 clear firewall between interface and implementation.
-
 그렇지 않으면 클래스 속성들의 상태를 검사를 하거나, 혹은 바꾸거나, I<클래스
 메소드>의 중개를 통해 이루어 져야 한다. 클래스 속성 접근자들은 본질적으로나
 기능적으로 오브젝트의 인스탄스 속성들의 상태를 바꿀때 사용하는 접근자와
@@ -78,7 +69,6 @@ name or any object of that class.  If we assume that $an_object is of
 type Some_Class, and the &Some_Class::population_count method accesses
 class attributes, then these two invocations should both be possible,
 and almost certainly equivalent.
-
 당신은 클래스 속성들의 접근을 클래스 이름이나 해당 클래스의 오브젝트들을 통해서
 허용해야 한다. 만약에 우리가 $as_object가 Some_Class라는 타입이라고 가정하고
 &Some_Class::population_count가 클래스 속성을 접근하는 메소드라면 그러면 이
@@ -94,7 +84,6 @@ class attributes, any more than it provides a syntactic mechanism to
 declare instance attributes.  Perl provides the developer with a broad
 set of powerful but flexible features that can be uniquely crafted to
 the particular demands of the situation.
-
 질문이 있다면, 당신은 어디에 상태값을 저장할것이면 어떤 메소드를 이용해 그
 값들을 접근할 것인가? 이러한것들을 정적인 데이타 멤버라고 부르는 좀더 제약적인
 C++ 언어와는 다르게, 펄은 클래스 속성을 선언하기 위해 인스탄스 속성을 정의하는
@@ -108,7 +97,6 @@ outside world, and a lexical file scope for privacy.  Either of these
 two mechanisms can be used to implement class attributes.  That means you
 get to decide whether to put your class attributes in package variables
 or to put them in lexical variables.
-
 펄에게 있어 클래스는 보통 모듈과 같이 구현될수 있다. 모듈은 서로 보완을 해주는
 두개의 기능으로 나눌수가 있겠는데: 바깥세상과의 인터페이싱을 위한 패키지와
 프라이버시를 위한 파일내의 렉시칼 영역. 이 두개의 메카니즘을 이용하여 클래스
@@ -122,17 +110,29 @@ of inheritance or sensitive to it.  If you choose lexical variables,
 you can elect to permit access to them from anywhere in the entire file
 scope, or you can limit direct data access exclusively to the methods
 implementing those attributes.
+# TODO: 오역이라 재해석이 필요함 context를 확실히 하고 번역 시도.
+그것들뿐만 아니라 결정할것들이 있다. 만약 패키지 변수를 사용 하기로 선택했다면,
+상속을 무시하던지 민감하게 생각해서 클래스 속성 접근자 메소들를 만들수
+있겠다. 만약 렉시컬 변수를 선택했다면 전체 파일 영역에서 선출해서 변수들을
+접근할수 있는 권한을 줄수 있으며 아니면 메소드들이 직접 속성들을 접근 할수 있는 부분을
+확실히 제한을 두어 구현할수 있겠다.
+
 
 =head1 Class Data in a Can
+=head1 캔안에 들어 있는 클래스 데이타
 
 One of the easiest ways to solve a hard problem is to let someone else
 do it for you!  In this case, Class::Data::Inheritable (available on a
 CPAN near you) offers a canned solution to the class data problem
 using closures.  So before you wade into this document, consider
 having a look at that module.
-
+어려운 문제를 푸는데에 있어 가장 쉬운 방법이 있다면 그건 다른 사람에게 그 문제를
+풀도록 나둘수 있겠다. 이경우, Class::Data::Inheritance (당신에게 가까운
+CPAN에 있습니다)는 클래스 데이타 문제를 클로져를 이용하여 바로 따서 사용할수
+있는 해결법을 제공한다.
 
 =head1 Class Data as Package Variables
+=head1 패키지 변수로 사용하는 클래스 데이타
 
 Because a class in Perl is really just a package, using package variables
 to hold class attributes is the most natural choice.  This makes it simple
@@ -143,10 +143,21 @@ use package variables like $Some_Class::CData1 and $Some_Class::CData2
 to hold these attributes.  But we certainly don't want to encourage
 outsiders to touch those data directly, so we provide methods
 to mediate access.
+펄에서의 클래스는 결국 패키지나 마찬가지라서, 패키지 변수를 이용하여 클래스
+속성을 담는 방법이 가장 자연스러운거 같다. 이를 통해 각 클래스들이 간단하게
+자기들만의 클래스 속성을 가질수 있는거 같다. Some_Class라는 클래스를 가지고
+있다고 가정하자 이 클래스는 파일 전체 내에서 전역변수로 사용할수 있는 여러
+속성들을 필요로 한다. 가장 쉬운 방법으로 할수 있는 방법은 $Some_Class::CData1나
+$Some_Class::CData2같은 패키지 변수들을 이용해 속성값들을 줄수 있겠다. 확실한게
+있다면 우린 이 데이타를 외부에서 직접 에세스 하는 것을 원치 않을 것이다, 그래서
+데이타 에세스를 중간에서 대신 담당하는 메소드들을 제공한다.
 
 In the accessor methods below, we'll for now just ignore the first
 argument--that part to the left of the arrow on method invocation, which 
 is either a class name or an object reference.
+# TODO: context가 확실치 않아 오역으로 남겨짐
+아래에 있는 접근자 메소드들을 보면, 우선 첫번째 인자는 무시하도록 하자--메소드
+실행시 거시서부터 왼쪽방향의 화살표 즉 클래스 이름이거나 오브젝트 참조값인.
 
     package Some_Class;
     sub CData1 {
